--- a/login-registro.html
+++ b/login-registro.html
@@ -21,9 +21,8 @@
 </head>
 
 <body>
-
-  <!-- Empieza Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+   <!-- Empieza Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
       <a href="index.html" class="navbar-brand">
         <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
@@ -51,15 +50,15 @@
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
-          </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Sign Up</a>
-          <p class="" id="validacion"></p>
+          <!-- <li class="nav-item text-menu">
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
+          </li> -->
+          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </div>
   </nav> <!-- navbar -->
+
     <!-- inicia section -->
     <section>
         <div class="banner-area">
