--- a/nosotros.html
+++ b/nosotros.html
@@ -47,12 +47,14 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Sign Up</a>
+          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
-    </nav> <!-- navbar -->
+    </div>
+  </nav> <!-- navbar -->
+    
 
   <main>
     <div class=""  data-aos="fade-up">
