--- a/contacto.html
+++ b/contacto.html
@@ -235,7 +235,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <img src="Assets/img/hogari-logo.png" class="img-fluid p-2 " width="50%" alt="">
+            <img src="./Assets/img/hogari-logo.png" class="img-fluid p-2 " width="50%" alt="">
             <form class="" id="form">
               <h3 class="text-dark fw-bold fs-4 mb-2">Inicio de sesión</h3>
               <div class="fw-normal text-muted mb-4">¿No tienes cuenta? <a href="Registro.html">Registrate</a></div>
