--- a/index.html
+++ b/index.html
@@ -158,26 +158,29 @@
   </section>
 
   <section>
-    <div class="row align-items-center">
+    <div class="row align-items-start">
       <div class="col">
 
 
-        <div data-aos="fade-right" data-aos-duration="3000">
-          <img src="/Assets/img/casa.jpg" alt="">
+        <div data-aos="fade-right"  class="container mt-5 mb-5" data-aos-duration="3000">
+          <img src="./Assets/img/casa.jpg" alt="" style="border-radius:20px;height: 300px;margin-left: 30px;">
         </div>
 
       </div>
 
       <div class="col">
-        <p>Cambia tu vida con estos sencillos pasos:</p>
-        <ul>
-          <li>1.-Entra en nuestra página.</li>
-          <li>2.-Busca la ciudad que mas te guste.</li>
-          <li>3.-Encuentra el lugar de tus sueños.</li>
-          <li>4.-Da un simple click y cambia tu vida.</li>
-        </ul>
+        <div class=" margen-4ta-inicio col-md-12">
+          <div class='console-container'><span id='text'></span>
+            <div class='console-underscore' id='console'>&#95;</div>
+          </div>
+        </div>
+        <p class="cambio"><i class="bi bi-search"></i> Busca en nuestra pagina</p>
+        <p class="cambio"><i class="bi bi-map"></i> Ve nuestras opciones en la ciudad que mas te guste</p>
+        <p class="cambio"><i class="bi bi-hand-index"></i> Da un click en la opcion que mas te guste</p>
+        <p class="cambio"><i class="bi bi-house-heart"></i> Inicia una nueva vida</p>
       </div>
     </div>
+
 
   </section>
 
@@ -385,7 +388,7 @@
     <p>Hogari &copy; 2022 Todos los derechos reservados</p>
   </footer>
 
-
+  <script src="./Assets/JS/index/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
     integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
     crossorigin="anonymous"></script>
