--- a/contacto.html
+++ b/contacto.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-  <!-- Empieza Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+   <!-- Empieza Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
       <a href="index.html" class="navbar-brand">
         <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
@@ -45,8 +45,6 @@
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
-
-
           <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
@@ -92,8 +90,8 @@
           <div class="card-body">
             <p class="card-title" style="text-align: center;margin-bottom: 30px;font-size: 30px;padding-top: 0px;">
               Contactos</p>
-            <p style="text-align: center;"><i class="bi bi-telephone"></i>Teléfono:33225099</p>
-            <p style="text-align: center;"><i class="bi bi-geo-alt"></i>Dirección:Av Naciones Unidas, Zapopan, Jal.</p>
+            <p style="text-align: center;"><i class="bi bi-telephone"></i>Telefono:33225099</p>
+            <p style="text-align: center;"><i class="bi bi-geo-alt"></i>Direccion:Av Naciones Unidas, Zapopan, Jal.</p>
             <p style="text-align: center;"><i class="bi bi-instagram"></i><a
                 href="https://www.instagram.com/accounts/onetap/?next=%2F"
                 style="text-decoration: none;color:black;">Instagram</a></p>
@@ -122,7 +120,7 @@
         <div class="mb-2 form-floating">
           
           <input class="form-control"  id="telefono" type="tel" placeholder="Tu telefono">
-          <label for="telefono">Teléfono</label>
+          <label for="telefono">Telefono</label>
       </div>
             <div class="mb-2 form-floating">
                 
@@ -224,7 +222,7 @@
   </section> <!-- Fin del toast -->
 
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
-    <p>Hogari &copy; 2022 Todos los derechos reservados</p>
+    <p>Hogari &copy; 2022 Todos los derechos Reservados</p>
   </footer>
 
 
