--- a/formarrendador.html
+++ b/formarrendador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario para Arrendador</title>
+    <title>Equipo Dinamita</title>
     <!-- Iconos de bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Cargamos bootstrap desde el CDN -->
@@ -104,7 +104,7 @@
                       <span class="input-group-text">$</span>
                       <input type="text" id="precio" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" required>
                       <div class="invalid-feedback">Debe completar los datos</div>
-                      <div class="valid-feedback">Campo válido</div>
+                      <div class="valid-feedback">Campo valido</div>
                       <small id="Costo" class="form-text text-muted">Introduce el costo que los inquilinos deberán pagar por mes en tu propiedad</small>
                       </div>
                       <!--Termina costo-->
@@ -114,8 +114,8 @@
                         <label for="inputAddress">¿Para cuántas personas es la capacidad de tu propiedad?</label>
                         <input type="text" class="form-control" id="numeroPersonas" placeholder="2" aria-describedby="lugaresDisponibles" min="1" required>
                         <div class="invalid-feedback">Debe completar los datos</div>
-                        <div class="valid-feedback">Campo válido</div>
-                        <small id="lugaresDisponibles" class="form-text text-muted">Número de inquilinos</small>
+                        <div class="valid-feedback">Campo valido</div>
+                        <small id="lugaresDisponibles" class="form-text text-muted">Numero de inquilinos</small>
                       </div> 
                       <br>
                       <!--Termina lugares disponibles-->
@@ -141,8 +141,8 @@
                         <label for="exampleFormControlTextarea1">Describenos las características de tu propiedad</label>
                         <input type="text" class="form-control" id="Descripcion" rows="3" required>
                         <div class="invalid-feedback">Debe completar los datos</div>
-                        <div class="valid-feedback">Campo válido</div>
-                          <small id="Descripcion" class="form-text text-muted">Haz una descripción de las características más importantes de tu propiedad.</small>
+                        <div class="valid-feedback">Campo valido</div>
+                          <small id="Descripcion" class="form-text text-muted">Haz una descripcion de las características más importantes de tu propiedad.</small>
                         </div> <!--Termina texto-->
                      
                       <br>
@@ -150,22 +150,22 @@
                         <label for="inputAddress">Introduce el tamaño de tu propiedad en metros cuadrados</label>
                         <input type="text" class="form-control" id="tamano" placeholder="50 m2" min="1" required >
                         <div class="invalid-feedback">Debe completar los datos</div>
-                        <div class="valid-feedback">Campo válido</div>
+                        <div class="valid-feedback">Campo valido</div>
                       </div> <!-- Termina tamaño de propiedad -->
                       <br>
 
                       <!--Empieza imagen-->
-                      <label for="Imagenes">Adjunta imágenes de tu propiedad</label>
+                      <label for="Imagenes">Adjunta imagenes de tu propiedad</label>
                       <div class="input-group mb-3">
                         <input type="file" class="form-control"  id="inputGroupFile02" onchange="return validarExt()">
                         <label class="input-group-text" for="inputGroupFile02">Upload</label>
-                        <small id="Descripcion" class="form-text text-muted">Selecciona imágenes adecuadas, en las que se aprecien las dimensiones de tu propiedad.</small>
+                        <small id="Descripcion" class="form-text text-muted">Selecciona imagenes adecuadas, en las que se aprecien las dimensiones de tu propiedad.</small>
 
                       </div>
                       <!--Termina imagen-->
                       <br>
                       <div class="col-auto">
-                        <button type="submit"  id="btnSubmit" class="btnSubmit btn-primary mb-3" value="validar" >Validar</button>
+                        <button type="submit"  id="btnSubmit" class="btnSubmit btn-primary mb-3" value="validar" >validar</button>
                         
                       </div>
 
@@ -233,8 +233,8 @@
 
 
       <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
-        <p>Hogari &copy; 2022 Todos los derechos Reservados</p>
-      </footer>
+          <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
+      </footer> <!-- Termina footer -->
      <script src="./Assets/JS/FormularioArrendador/FormularioArrendador.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
