--- a/formularioVentas.html
+++ b/formularioVentas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Ventas</title>
+    <title>Equipo Dinamita</title>
     <!-- Iconos de bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Cargamos bootstrap desde el CDN -->
@@ -22,45 +22,6 @@
           <a href="index.html" class="navbar-brand">
             <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
           </a>
-<<<<<<< HEAD
-<<<<<<< HEAD
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
-          <li class="nav-item">
-            <!--La clase active se debe de poner en cada página del en el navbar -->
-            <a href="/index.html" class="nav-link active" aria-current="page">
-              Inicio
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
-          </li>
-          <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
-          </li>
-          <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
-          </li>
-        </ul>
-        <ul class="navbar-nav col-xs-4 border-mq">
-
-
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar sesión </a>
-          </li>
-
-          <a href="" class="btn btn-primary btn-signup">Únete</a>
-        </ul>
-      </div>
-    </div>
-  </nav> <!-- navbar -->
-=======
-=======
->>>>>>> 676b467e380bdc0598f266da5a3e1b46bed3c5e1
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -97,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 p-3">
-                    <h3 class="fw-bold">Reglas y Preferencias</h3>
+                    <h3 class="fw-bold">Reglas y preferencias</h3>
                     <div class="d-flex justify-content-between pe-2 my-5">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
@@ -121,7 +82,7 @@
                         </div>
                     </div>
                     <div class="my-5">
-                        <p>¿Cuál es la edad mínima preferidos de sus inquilinos?</p>
+                        <p>¿Cuál es la edad mínima de sus inquilinos preferidos?</p>
                         <label for="edadMin"></label>
                         <select class='form-select' name="edadMin" id="edadMin">
                             <optgroup label="Preferencia">
@@ -133,7 +94,7 @@
                             </optgroup>
                         </select>
 
-                        <p class='mt-5'>¿Cuál es la edad máxima preferidos de sus inquilinos?</p>
+                        <p class='mt-5'>¿Cuál es la edad máxima de sus inquilinos preferidos?</p>
                         <label class="" for="edadMin"></label>
                         <select class='form-select' name="edadMin" id="edadMin">
                             <optgroup label="Preferencia">
@@ -209,7 +170,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--
                     <div>
                         <p>Que tipo de inquilinos prefieres</p>
                         <div class="d-flex justify-content-between pe-2 my-5">
@@ -235,7 +195,7 @@
                             </div>
                         </div>
                     </div>
-                    -->
+                    
                 </div>
             </div>
         </div>
