--- a/ventas.html
+++ b/ventas.html
@@ -142,7 +142,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>¡Bienvenido de vuelta!</p>
+          <p>Bienvenido de vuelta!</p>
         </div> 
       </div> 
     </div>  
@@ -215,13 +215,13 @@
   </section> <!-- Fin del toast -->
 
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
-      <p>Hogari &copy; 2022 Todos los derechos reservados</p>
+      <p>Hogari &copy; 2022 Todos los derechos Reservados</p>
   </footer> <!-- Termina footer -->
 
 
-    <script src="./Assets/JS/ventas/ventas.js"></script>
+
  
-    <script src="/Assets/JS/"></script>
+    <script src="/assets/js/ventas/ventas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
