--- a/ventas2.html
+++ b/ventas2.html
@@ -109,7 +109,7 @@
               data-bs-dismiss="modal">Iniciar sesión</button>
           </form>
           <a href="./Registro.html" class="nav-link active" aria-current="page">
-            ¿No eres miembro? Regístrate. 
+            ¿No eres miembro? Regístrate 
           </a>
         </div>
         <div class="modal-footer">
@@ -134,7 +134,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>¡Bienvenido de vuelta!</p>
+          <p>Bienvenido de vuelta!</p>
         </div> 
       </div> 
     </div>  
