Detalles de frontend

--- a/Registro.html
+++ b/Registro.html
@@ -50,7 +50,7 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
+            <a href="login-registro.html" class="nav-link"> Iniciar sesión </a>
           </li>
           <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
@@ -117,7 +117,7 @@
                             <label class="custom-control-label" for="customCheck1">Acepto los términos y condiciones</label>
                           </div>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-signup w-100 my-4" id="btnSubmit">Enviar</button>
+                        <button type="submit" class="btn btn-primary btn-signup w-100 my-4" id="btnSubmit">Registrar</button>
                         <p class="warnings" id="warnings"></p>
                       </form>
                     </div>
@@ -199,6 +199,7 @@
     <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
   </footer> <!-- Termina footer -->
   <!-- sweet alert2 import -->
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
     integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
