--- a/indexTest.html
+++ b/indexTest.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-    <!-- Empieza Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+     <!-- Empieza Navbar -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
       <div class="container">
         <a href="index.html" class="navbar-brand">
           <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
@@ -50,7 +50,7 @@
           </ul>
           <ul class="navbar-nav col-xs-4 border-mq">
             <li class="nav-item text-menu">
-              <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
+              <a href="login-registro.html" class="nav-link"> Iniciar sesión </a>
             </li>
             <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
           </ul>
@@ -272,8 +272,7 @@
     <p>Hogari &copy; 2022 Todos los derechos Reservados</p>
 </footer> <!-- Termina footer -->
 
-  <script src="/quieneSomos.html"></script>
-  <script src="/Assets/JS/quieneSomos.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
   
