--- a/ventas.html
+++ b/ventas.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-   <!-- Empieza Navbar -->
+       <!-- Empieza Navbar -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
       <a href="index.html" class="navbar-brand">
@@ -44,7 +44,7 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
+            <a href="login-registro.html" class="nav-link"> Iniciar sesión </a>
           </li>
           <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
