--- a/ventas2.html
+++ b/ventas2.html
@@ -44,7 +44,7 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
+            <a href="login-registro.html" class="nav-link"> Iniciar sesión </a>
           </li>
           <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
