--- a/index.html
+++ b/index.html
@@ -25,43 +25,43 @@
 </head>
  
 <body>
-   <!-- Empieza Navbar -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
-          <li class="nav-item">
-            <!--La clase active se debe de poner en cada página del en el navbar -->
-            <a href="/index.html" class="nav-link active" aria-current="page">
-              Inicio
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
-          </li>
-          <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
-          </li>
-          <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
-          </li>
-        </ul>
-        <ul class="navbar-nav col-xs-4 border-mq">
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
-          </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
-        </ul>
+     <!-- Empieza Navbar -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
+            <li class="nav-item">
+              <!--La clase active se debe de poner en cada página del en el navbar -->
+              <a href="/index.html" class="nav-link active" aria-current="page">
+                Inicio
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/ventas.html" class="nav-link"> Productos </a>
+            </li>
+            <li class="nav-item">
+              <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            </li>
+            <li class="nav-item">
+              <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            </li>
+          </ul>
+          <ul class="navbar-nav col-xs-4 border-mq">
+            <li class="nav-item text-menu">
+              <a href="login-registro.html" class="nav-link"> Iniciar sesión </a>
+            </li>
+            <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav> <!-- navbar -->
+    </nav> <!-- navbar -->
 
   <main>
     <div>
@@ -73,7 +73,7 @@
             <!-- Formulario de busqueda -->
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="¿Que estás buscando?" aria-label="Search">
-              <button class="btn btn-success my-2 my-sm-0" type="submit">Buscar</button>
+              <button class="btn btn-success btn-signup my-4 " type="submit">Buscar</button>
             </form>
           </div>
         </div>
@@ -308,7 +308,8 @@
                   <input type="checkbox" class="custom-control-input" id="customCheck1">
                   <label class="custom-control-label" for="customCheck1">Recordar contraseña</label>
                 </div>
-              <button type="submit" class="btn btn-primary btn-signup w-100 my-4" id="btn-login">Iniciar sesión</button>
+            
+              <button class="btn btn-primary btn-signup w-100 my-4" id="btn-login">Iniciar sesión</button>
               <p class="warnings" id="warnings"></p>
 
               <div  id="spinner">
@@ -333,16 +334,17 @@
   </div> <!-- Fin del modal de login -->
 
 
-  <!-- toast -->
+
+<!-- 
   <section>
-    <!-- ! Forma corta -->
-    <!-- Esto hará que aparezca en la parte inferior izquierda... -->
+    Forma corta 
+    Esto hará que aparezca en la parte inferior izquierda...
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index:10;">
       <div id="toast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
           <strong class="me-auto">Inicio de sesión</strong>
           <small>Conexión exitosa...</small>
-          <!-- Para que se cierre el toast con data-bs-dismiss -->
+         Para que se cierre el toast con data-bs-dismiss 
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
@@ -354,34 +356,30 @@
 
     </div>
     </div>
-  </section> <!-- Fin del toast -->
-
+  </section> 
+   -->
 
 
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
     <p>Hogari &copy; 2022 Todos los derechos Reservados</p>
   </footer> <!-- Termina footer -->
-  <script src="./Assets/JS/login/login.js"></script>
-  <script src="/quieneSomos.html"></script>
-  <script src="/Assets/JS/quieneSomos.js"></script>
+  <!-- <script src="/Assets/JS/quieneSomos.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
     integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
     integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
     crossorigin="anonymous"></script>
-
   <!-- Estos son scripts para los efectos y funcione chido la página ok? -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src='assets/js/jquery.min.js'></script>
   <script src='assets/js/jquery.mousewheel.min.js'></script>
   <script src='assets/js/owl.carousel.min.js'></script>
   <script src='assets/js/main.js'></script>
-  <script src="Assets/js/toast.js"></script>
-  <script src="../lib/anime.min.js"></script>
+  <!-- <script src="Assets/js/toast.js"></script> -->
+  <!-- <script src="../lib/anime.min.js"></script> -->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- <script src="Assets/js/toast.js"></script> -->
-  <script src='assets/js/login-inicio/login.js'></script>
   <script src='assets/js/index/app1.js'></script>
   <script>
     AOS.init();
