--- a/ventas.html
+++ b/ventas.html
@@ -76,7 +76,7 @@
               <option href="./ventas2.html">Monterrey</option>
             </select>
 
-            <a href="./formarrendador.html" class="nav-link" id="btn-producto"> ¡Vamos! </a>
+            <a href="" class="nav-link" id="btn-producto"> ¡Vamos! </a>
 
           </form>
           <a href="./formarrendador.html" class="nav-link" id="btn-producto"> Agregar un nuevo producto </a>
