--- a/ventas.html
+++ b/ventas.html
@@ -62,8 +62,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 d-flex justify-content-center p-5"> <!--- col-md-12 para centrar el formulario -->
-        <form class="col-md-5 d-flex justify-content-center" role="search"><!--- col-md-5 para la anchura del input -->
-          <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+        <form class="col-md-5 d-flex justify-content-center" role="Buscar"><!--- col-md-5 para la anchura del input -->
+          <input class="form-control me-2 " type="Buscar" placeholder="Buscar" aria-label="Buscar">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
             Ciudad
           </button>
