ÂCorreccion de ortografia

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="card" style="width: 16rem;height: 450px;">
                   <img src="assets/img/index/queretaro.jpg" class="card-img-top" alt="..." style="height: 200px;">
                   <div class="card-body">
-                    <h5 class="card-title">Queretaro</h5>
+                    <h5 class="card-title">Querétaro</h5>
                     <p class="card-text">Ubicado muy cerca de la Ciudad de México, en la región centro-norte del país,
                       es una excelente opción para realizar actividades al aire libre, conocer lugares que marcaron la
                       historia de México y sacar tu lado más intrépido entre montañas.</p>
@@ -120,7 +120,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Monterrey</h5>
                     <p class="card-text">El mercado inmobiliario de Monterrey es la joya del dinamismo inmobiliario en
-                      la región norte del país, descubre las razones y busca aquí tu nuevo hogar.</p>
+                      la región norte del país, descubre las razones y busca aquí tú nuevo hogar.</p>
 
                   </div>
                 </div>
@@ -182,9 +182,9 @@
                 <div class='console-underscore' id='console'> </div>
               </div>
             </div>
-            <p class="cambio"><i class="bi bi-search"></i> Busca en nuestra pagina</p>
-            <p class="cambio"><i class="bi bi-map"></i> Ve nuestras opciones en la ciudad que mas te guste</p>
-            <p class="cambio"><i class="bi bi-hand-index"></i> Da un click en la opcion que mas te guste</p>
+            <p class="cambio"><i class="bi bi-search"></i> Busca en nuestra página</p>
+            <p class="cambio"><i class="bi bi-map"></i> Ve nuestras opciones en la ciudad que más te guste</p>
+            <p class="cambio"><i class="bi bi-hand-index"></i> Da un click en la opción que más te guste</p>
             <p class="cambio"><i class="bi bi-house-heart"></i> Inicia una nueva vida</p>
           </div>
         </div>
